# gfx-space-rs

./: Cargo.toml
assets/maps/: test.tmx
src/: blur.rs  circle.rs  game.rs  input.rs  lib.rs  main.rs  player.rs  rectangle.rs  sprite.rs  tilemap.rs  types.rs
src/shader/: blur_150.glslf  blur_150.glslv  circle_150.glslf  circle_150.glslv  rectangle_150.glslf  sprite_150.glslf  sprite_150.glslv
